--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.list-item{
+    @apply xl:mx-5 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400;
+}
