--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -112,6 +112,9 @@
     @apply line-through text-red-600;
 }
 .prod-cart-icon-link{
+    @apply bg-white border border border-gray-300 p-3 ml-2 rounded hover:bg-red-600 hover:border-red-600 group transition  duration-700 ease-in-out;
+}
+.prod-cart-icon-link-1st{
     @apply bg-white border border border-gray-300 p-3 rounded hover:bg-red-600 hover:border-red-600 group transition  duration-700 ease-in-out;
 }
 .prod-cart-icon{
