--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,4 +1,9 @@
 @tailwind base;
+
+#toggle:checked ~ label div.toggle-dot{
+    @apply translate-x-8;
+}
+
 @tailwind components;
 
 
@@ -8,16 +13,16 @@
     @apply border-b-2 border-gray-200 py-5;
 }
 .collapse-header{
-    @apply w-full text-left cursor-pointer list-none hover:text-red-600 transition duration-700 ease-in-out text-gray-600;
+    @apply w-full text-left cursor-pointer list-none hover:text-red-600 transition duration-700 ease-in-out text-gray-600 dark:text-white;
 }
 .col-item{
-    @apply hover:text-red-600 transition duration-700 ease-in-out text-gray-500;
+    @apply hover:text-red-600 transition duration-700 ease-in-out text-gray-500 dark:text-white;
 }
 .coll-item{
-    @apply hover:text-red-600 transition duration-700 ease-in-out text-gray-500 pb-2;
+    @apply hover:text-red-600 transition duration-700 ease-in-out text-gray-500 pb-2 dark:text-white;
 }
 .tag-button{
-    @apply bg-transparent border text-gray-600 rounded px-4 py-1 hover:bg-red-600 hover:text-white transition duration-700 ease-in-out;
+    @apply bg-transparent border dark:bg-white dark:text-gray-800 dark:border-white text-gray-600 rounded px-4 py-1 hover:bg-red-600 hover:text-white transition duration-700 ease-in-out;
 }
 
 
@@ -34,7 +39,7 @@
 
 
 .cart-history{
-    @apply border my-8 py-3 px-3 xl:px-0 lg:px-0 xl:leading-none lg:leading-none leading-loose;
+    @apply border my-8 py-3 px-3 xl:px-0 lg:px-0 xl:leading-none lg:leading-none leading-loose dark:border-gray-600;
 }
 .cart-history-header{
     @apply lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around xl:items-center
@@ -68,16 +73,16 @@
     @apply lg:ml-4 xl:ml-4 md:ml-4 xl:mt-0 lg:mt-0 md:mt-0 mt-3;
 }
 .cart-header{
-    @apply text-lg text-gray-700 font-light;
+    @apply text-lg text-gray-700 font-light dark:text-gray-100;
 }
 .cart-price{
-    @apply text-gray-500 text-sm font-semibold py-2;
+    @apply text-gray-500 text-sm font-semibold py-2 dark:text-gray-100;
 }
 .discount-title{
-    @apply bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0;
+    @apply bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0 ;
 }
 .cart-title{
-    @apply text-gray-600 pb-2;
+    @apply text-gray-600 pb-2 dark:text-gray-100;
 }
 .cart-price-through{
     @apply text-red-500 font-semibold line-through;
@@ -86,10 +91,10 @@
     @apply flex items-center;
 }
 .cart-icon-link{
-    @apply bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-2 group transition duration-700 ease-in-out;
+    @apply bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 hover:text-gray-100 mr-2 group transition duration-700 ease-in-out;
 }
 .cart-icon{
-    @apply text-gray-600 text-lg group-hover:text-gray-50 transition duration-700 ease-in-out text-gray-400;
+    @apply text-gray-600 text-lg group-hover:text-gray-100 transition duration-700 ease-in-out text-gray-400;
 }
 /* list-cart-item end */
 
@@ -102,14 +107,17 @@
 .prod-single-cart{
     @apply bg-white shadow-md mt-4 sm:mt-0 md:mt-0 lg:mt-0 xl:mt-0;
 }
+.prod-cart-content{
+    @apply bg-white border-gray-100 dark:bg-gray-800 border dark:border-gray-600;
+}
 .prod-cart-heading{
-    @apply text-gray-800 text-sm;
+    @apply text-gray-800 text-sm dark:text-gray-100;
 }
 .prod-cart-price{
-    @apply text-gray-800 text-sm py-2;
+    @apply text-gray-800 text-sm py-2 dark:text-gray-100;
 }
 .prod-price-throught{
-    @apply line-through text-red-600;
+    @apply line-through text-red-600 ml-2;
 }
 .prod-cart-icon-link{
     @apply bg-white border border border-gray-300 p-3 ml-2 rounded hover:bg-red-600 hover:border-red-600 group transition  duration-700 ease-in-out;
@@ -180,10 +188,10 @@
     @apply lg:max-w-xs xl:max-w-sm leading-loose;
 }
 .footer-single-blog-header{
-    @apply text-xl text-gray-800 font-semibold pb-3;
+    @apply text-xl text-gray-800 font-semibold pb-3 dark:text-gray-100;
 }
 .footer-single-blog-title{
-    @apply text-sm text-gray-800 pb-2;
+    @apply text-sm text-gray-800 pb-2 dark:text-gray-100;
 }
 .social-link{
     @apply text-gray-500 hover:text-red-600 transition duration-700 ease-in-out mr-2;
@@ -196,10 +204,10 @@
     @apply leading-loose xl:my-0 lg:my-0 xl:my-0 lg:my-0 my-10;
 }
 .footer-single-blog-info-heading{
-    @apply text-xl text-gray-800 font-semibold pb-3;
+    @apply text-xl text-gray-800 font-semibold pb-3 dark:text-gray-100;
 }
 .footer-info-link{
-    @apply text-sm text-gray-800 hover:text-red-600 transition duration-700 ease-in-out;
+    @apply text-sm text-gray-800 hover:text-red-600 transition duration-700 ease-in-out dark:text-gray-100;
 }
 
 
